[package]
name = "falling-sand-playdate"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = [
    "staticlib", # for hardware
    "dylib",     # for simulator
    "rlib",      # to link with bin
]

[dependencies]
playdate = "0.2.6"
crankit-game-loop = { git = "https://github.com/pomettini/crankit-game-loop.git" }

[package.metadata.playdate]
name = "Falling Sand"
author = "Giorgio Pomettini"
version = "0.1.0"
bundle-id = "com.pomettini.fallingsand"
description = "Falling Sand"
image-path = "img/system"
build-number = 1

[profile.dev]
panic = "abort"
overflow-checks = false

[profile.release]
panic = "abort"
opt-level = 3
overflow-checks = false
lto = "fat"
incremental = false
codegen-units = 1

debug = 0
strip = "symbols"
debug-assertions = false

[lints.clippy]
pedantic = "warn"